--- a/Mos Burger Spring Font End/pos.html
+++ b/Mos Burger Spring Font End/pos.html
@@ -15,9 +15,10 @@
             <div class="menu">
                 <a class="menu-item" onclick="showItems('burger')"><i class="home-icon"></i></a>
                 <a class="menu-item" onclick="showItems(window.location.href='burgermanage.html')"><i class="food-icon"></i></a>
-                <a class="menu-item" onclick="pasta.html"><i class="table-icon"></i></a> 
-                <a href="#" class="menu-item"><i class="chart-icon"></i></a>
+                <a class="menu-item" onclick="showItems(window.location.href='orderManage.html')"><i class="food-icon"></i></a>
                 <a href="#" class="menu-item"><i class="logout-icon"></i></a> 
+                <a href="#" class="menu-item"><i class="logout-icon"></i></a> 
+
 
             </div>
         </div>
