burger manager.html

--- a/Mos Burger Spring Font End/burgermanage.html
+++ b/Mos Burger Spring Font End/burgermanage.html
@@ -4,9 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Burger Management</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="burgermanage.css">
+
 </head>
 <body>
+
+    <div class="sidebar">
+        <div class="logo">
+            <img src="img/logo.svg" alt="Logo">
+        </div>
+        <div class="menu">
+            <a href="#" class="menu-item">
+                <i class="home-icon"></i>
+            </a>
+            <a href="#" class="menu-item">
+                <i class="food-icon"></i>
+            </a>
+            <a href="#" class="menu-item">
+                <i class="user-icon"></i>
+            </a>
+            <a href="#" class="menu-item">
+                <i class="table-icon"></i>
+            </a>
+            <a href="#" class="menu-item">
+                <i class="chart-icon"></i>
+            </a>
+            <a href="#" class="menu-item">
+                <i class="logout-icon"></i>
+            </a>
+        </div>
+    </div>
+
+    <body>
+        <!-- Sidebar -->
+        <div class="sidebar">
+            <!-- ... sidebar content ... -->
+        </div>
+    
+        <!-- Main Content -->
+        <div class="container mt-5">
+            <!-- ... burger management content ... -->
+        </div>
+    </body>
+
     <div class="container mt-5">
         <h2 class="text-center mb-4">Burger Management</h2>
 
