--- a/Mos Burger Spring Font End/pasta.html
+++ b/Mos Burger Spring Font End/pasta.html
@@ -1,140 +1,67 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pasta Management</title>
-    <link rel="stylesheet" href="styles.css">
-    <script defer src="pasta.js"></script>
-    <style>
-        .container {
-            display: flex;
-        }
-        .sidebar {
-            margin-right: 20px;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-        th, td {
-            padding: 10px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-        .controls {
-            margin-top: 20px;
-        }
-        .controls input {
-            margin-right: 10px;
-        }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <div class="sidebar">
-     
+    <div class="container mt-5">
+        <h2 class="text-center mb-4">Pasta Management</h2>
+
+        <!-- Add Pasta Form -->
+        <div class="card p-3 mb-4">
+            <h4>Add Pasta</h4>
+            <input type="text" id="pastaName" class="form-control mb-2" placeholder="Enter Pasta Name">
+            <input type="number" id="pastaPrice" class="form-control mb-2" placeholder="Enter Pasta Price">
+            <input type="text" id="pastaDescription" class="form-control mb-2" placeholder="Enter Description">
+            <input type="text" id="pastaImageUrl" class="form-control mb-2" placeholder="Enter Image URL">
+            <input type="text" id="pastaAvailable" class="form-control mb-2" placeholder="Enter Availability">
+            <button class="btn btn-success" onclick="addPasta()">Add Pasta</button>
         </div>
 
-        <div>
-            <div class="controls">
-                <input type="text" id="searchInput" placeholder="Search Pasta..." onkeyup="searchPasta()">
-                <input type="text" id="pastaName" placeholder="Pasta Name">
-                <input type="number" id="pastaPrice" placeholder="Price">
-                <input type="text" id="pastaImage" placeholder="Image URL">
-                <button onclick="addPasta()">Add Pasta</button>
-            </div>
+        <!-- Update Pasta Form -->
+        <div class="card p-3 mb-4" id="updatePastaForm" style="display:none;">
+            <h4>Update Pasta</h4>
+            <input type="text" id="updateName" class="form-control mb-2" placeholder="Enter New Name">
+            <input type="number" id="updatePrice" class="form-control mb-2" placeholder="Enter New Price">
+            <input type="text" id="updateDescription" class="form-control mb-2" placeholder="Enter New Description">
+            <input type="text" id="updateImageUrl" class="form-control mb-2" placeholder="Enter New Image URL">
+            <input type="text" id="updateAvailable" class="form-control mb-2" placeholder="Enter New Availability">
+            <button class="btn btn-warning" onclick="updatePastaDetails()">Update Pasta</button>
+            <button class="btn btn-secondary" onclick="cancelUpdate()">Cancel</button>
+        </div>
 
-            <table id="pastaTable">
-                <thead>
+        <!-- Search Pasta Form -->
+        <div class="card p-3 mb-4">
+            <h4>Search Pasta</h4>
+            <input type="text" id="searchPasta" class="form-control mb-2" placeholder="Enter Pasta Name">
+            <button class="btn btn-primary" onclick="searchPasta()">Search</button>
+        </div>
+
+        <button class="btn btn-primary mb-3" onclick="loadPasta()">Reload Data</button>
+
+        <!-- Pasta Table -->
+        <div class="table-responsive">
+            <table class="table table-bordered table-striped">
+                <thead class="table-dark">
                     <tr>
+                        <th>ID</th>
                         <th>Name</th>
                         <th>Price</th>
-                        <th>Image</th>
+                        <th>Description</th>
+                        <th>Image URL</th>
+                        <th>Available</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
-                <tbody></tbody>
+                <tbody id="pastaTableBody"></tbody>
             </table>
         </div>
     </div>
 
-    <script>
-        const baseURL = 'http://localhost:8080/pasta';
-
-        function navigateTo(page) {
-            window.location.href = page;
-        }
-
-        async function loadAllPasta() {
-            try {
-                const response = await fetch(`${baseURL}/allPasta`);
-                const pastas = await response.json();
-                renderTable(pastas);
-            } catch (error) {
-                console.error('Error loading pastas:', error);
-            }
-        }
-
-        function renderTable(pastas) {
-            const tableBody = document.querySelector('#pastaTable tbody');
-            tableBody.innerHTML = '';
-
-            pastas.forEach(pasta => {
-                const row = document.createElement('tr');
-                row.innerHTML = `
-                    <td>${pasta.name}</td>
-                    <td>Rs.${pasta.price}</td>
-                    <td><img src="${pasta.image_url}" alt="${pasta.name}" height="50"></td>
-                    <td>
-                        <button onclick="deletePasta('${pasta.id}')">Delete</button>
-                        <button onclick="updatePasta('${pasta.id}')">Update</button>
-                    </td>
-                `;
-                tableBody.appendChild(row);
-            });
-        }
-
-        async function addPasta() {
-            const name = document.getElementById('pastaName').value;
-            const price = document.getElementById('pastaPrice').value;
-            const imageUrl = document.getElementById('pastaImage').value;
-
-            try {
-                await fetch(`${baseURL}/addPasta`, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ name, price, image_url: imageUrl })
-                });
-                loadAllPasta();
-            } catch (error) {
-                console.error('Error adding pasta:', error);
-            }
-        }
-
-        async function deletePasta(id) {
-            try {
-                await fetch(`${baseURL}/deletePasta/${id}`, { method: 'DELETE' });
-                loadAllPasta();
-            } catch (error) {
-                console.error('Error deleting pasta:', error);
-            }
-        }
-
-        async function searchPasta() {
-            const searchInput = document.getElementById('searchInput').value.toLowerCase();
-            try {
-                const response = await fetch(`${baseURL}/searchPasta?name=${searchInput}`);
-                const pastas = await response.json();
-                renderTable(pastas);
-            } catch (error) {
-                console.error('Error searching pastas:', error);
-            }
-        }
-
-        window.onload = loadAllPasta;
-    </script>
+    <script src="pasta.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
