added frice page

--- a/Mos Burger Spring Font End/FoodItemmanage.html
+++ b/Mos Burger Spring Font End/FoodItemmanage.html
@@ -234,9 +234,8 @@
                 'Pasta': 'pasta.html',
                 'Bevarages': 'beverage.html',
                 'chicken': 'chicken.html',
-                'Pizza': 'pizza.html',
-                'Salad': 'salad.html',
-                'Desserts': 'desserts.html'
+                'Submarine': 'submarine.html',
+                'Fries': 'Fries.html',
             };
             
             if (pages[foodName]) {
