--- a/Mos Burger Spring Font End/burgermanage.html
+++ b/Mos Burger Spring Font End/burgermanage.html
@@ -5,63 +5,153 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Burger Management</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .card {
+            margin-bottom: 20px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+        .action-buttons .btn {
+            margin-right: 10px;
+        }
+        #updateBurgerForm {
+            display: none;
+            background-color: #f8f9fa;
+        }
+        .table-responsive {
+            border-radius: 8px;
+            overflow: hidden;
+        }
+        .form-control:focus {
+            border-color: #dc3545;
+            box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25);
+        }
+        .btn-burger {
+            background-color: #dc3545;
+            color: white;
+        }
+        .btn-burger:hover {
+            background-color: #bb2d3b;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <div class="container mt-5">
-        <h2 class="text-center mb-4">Burger Management</h2>
+        <h2 class="text-center mb-4">🍔 Burger Management</h2>
 
         <!-- Add Burger Form -->
         <div class="card p-3 mb-4">
-            <h4>Add Burger</h4>
-            <input type="text" id="burgerName" class="form-control mb-2" placeholder="Enter Burger Name">
-            <input type="number" id="burgerPrice" class="form-control mb-2" placeholder="Enter Burger Price">
-            <input type="text" id="burgerDescription" class="form-control mb-2" placeholder="Enter Description">
-            <input type="text" id="burgerImageUrl" class="form-control mb-2" placeholder="Enter Image URL">
-            <input type="text" id="burgerAvailable" class="form-control mb-2" placeholder="Enter Availability">
-            <button class="btn btn-success" onclick="addBurger()">Add Burger</button>
+            <h4 class="text-danger">Add New Burger</h4>
+            <div class="row g-3">
+                <div class="col-md-6">
+                    <label for="burgerName" class="form-label">Burger Name</label>
+                    <input type="text" id="burgerName" class="form-control" placeholder="e.g., Cheese Burger">
+                </div>
+                <div class="col-md-6">
+                    <label for="burgerPrice" class="form-label">Price</label>
+                    <input type="number" id="burgerPrice" class="form-control" placeholder="Enter price">
+                </div>
+                <div class="col-12">
+                    <label for="burgerDescription" class="form-label">Description</label>
+                    <textarea id="burgerDescription" class="form-control" rows="2" placeholder="Enter description"></textarea>
+                </div>
+                <div class="col-md-6">
+                    <label for="burgerImageUrl" class="form-label">Image URL</label>
+                    <input type="text" id="burgerImageUrl" class="form-control" placeholder="Enter image URL">
+                </div>
+                <div class="col-md-6">
+                    <label for="burgerAvailable" class="form-label">Availability</label>
+                    <select id="burgerAvailable" class="form-select">
+                        <option value="Yes">Available</option>
+                        <option value="No">Not Available</option>
+                    </select>
+                </div>
+                <div class="col-12">
+                    <button class="btn btn-burger" onclick="addBurger()">Add Burger</button>
+                </div>
+            </div>
         </div>
 
         <!-- Update Burger Form -->
-        <div class="card p-3 mb-4" id="updateBurgerForm" style="display:none;">
-            <h4>Update Burger</h4>
-            <input type="text" id="updateName" class="form-control mb-2" placeholder="Enter New Name">
-            <input type="number" id="updatePrice" class="form-control mb-2" placeholder="Enter New Price">
-            <input type="text" id="updateDescription" class="form-control mb-2" placeholder="Enter New Description">
-            <input type="text" id="updateImageUrl" class="form-control mb-2" placeholder="Enter New Image URL">
-            <input type="text" id="updateAvailable" class="form-control mb-2" placeholder="Enter New Availability">
-            <button class="btn btn-warning" onclick="updateBurgerDetails()">Update Burger</button>
-            <button class="btn btn-secondary" onclick="cancelUpdate()">Cancel</button>
+        <div class="card p-3 mb-4" id="updateBurgerForm">
+            <h4 class="text-danger">Update Burger</h4>
+            <div class="row g-3">
+                <input type="hidden" id="updateBurgerId">
+                <div class="col-md-6">
+                    <label for="updateBurgerName" class="form-label">Burger Name</label>
+                    <input type="text" id="updateBurgerName" class="form-control">
+                </div>
+                <div class="col-md-6">
+                    <label for="updateBurgerPrice" class="form-label">Price</label>
+                    <input type="number" id="updateBurgerPrice" class="form-control">
+                </div>
+                <div class="col-12">
+                    <label for="updateBurgerDescription" class="form-label">Description</label>
+                    <textarea id="updateBurgerDescription" class="form-control" rows="2"></textarea>
+                </div>
+                <div class="col-md-6">
+                    <label for="updateBurgerImageUrl" class="form-label">Image URL</label>
+                    <input type="text" id="updateBurgerImageUrl" class="form-control">
+                </div>
+                <div class="col-md-6">
+                    <label for="updateBurgerAvailable" class="form-label">Availability</label>
+                    <select id="updateBurgerAvailable" class="form-select">
+                        <option value="Yes">Available</option>
+                        <option value="No">Not Available</option>
+                    </select>
+                </div>
+                <div class="col-12">
+                    <div class="d-flex justify-content-end gap-2">
+                        <button class="btn btn-secondary" onclick="cancelUpdate()">Cancel</button>
+                        <button class="btn btn-burger" onclick="updateBurgerDetails()">Update Burger</button>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Search Burger Form -->
         <div class="card p-3 mb-4">
             <h4>Search Burger</h4>
-            <input type="text" id="searchBurger" class="form-control mb-2" placeholder="Enter Burger Name">
-            <button class="btn btn-primary" onclick="searchBurger()">Search</button>
+            <div class="input-group">
+                <input type="text" id="searchBurger" class="form-control" placeholder="Search by burger name...">
+                <button class="btn btn-outline-danger" type="button" onclick="searchBurger()">
+                    <i class="bi bi-search"></i> Search
+                </button>
+                <button class="btn btn-outline-secondary" type="button" onclick="loadBurger()">
+                    <i class="bi bi-arrow-counterclockwise"></i> Reset
+                </button>
+            </div>
         </div>
 
-        <button class="btn btn-primary mb-3" onclick="loadBurger()">Reload Data</button>
-
         <!-- Burger Table -->
-        <div class="table-responsive">
-            <table class="table table-bordered table-striped">
-                <thead class="table-dark">
-                    <tr>
-                        <th>ID</th>
-                        <th>Name</th>
-                        <th>Price</th>
-                        <th>Description</th>
-                        <th>Image URL</th>
-                        <th>Available</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody id="burgerTableBody"></tbody>
-            </table>
+        <div class="card p-3">
+            <div class="d-flex justify-content-between align-items-center mb-3">
+                <h4 class="mb-0">Burger List</h4>
+                <button class="btn btn-sm btn-outline-primary" onclick="loadBurger()">
+                    <i class="bi bi-arrow-repeat"></i> Refresh
+                </button>
+            </div>
+            <div class="table-responsive">
+                <table class="table table-hover align-middle">
+                    <thead class="table-danger">
+                        <tr>
+                            <th>ID</th>
+                            <th>Name</th>
+                            <th>Price</th>
+                            <th>Description</th>
+                            <th>Image</th>
+                            <th>Available</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody id="burgerTableBody"></tbody>
+                </table>
+            </div>
         </div>
     </div>
 
     <script src="burger.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
 </body>
 </html>
