--- a/Mos Burger Spring Font End/Fries.html
+++ b/Mos Burger Spring Font End/Fries.html
@@ -4,28 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fries Management</title>
+    <link rel="stylesheet" href="fooditem.css">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .card {
-            margin-bottom: 20px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-        .action-buttons .btn {
-            margin-right: 10px;
-        }
-        #updateFriesForm {
-            display: none;
-            background-color: #f8f9fa;
-        }
-        .table-responsive {
-            border-radius: 8px;
-            overflow: hidden;
-        }
-        .form-control:focus {
-            border-color: #ffc107;
-            box-shadow: 0 0 0 0.25rem rgba(255, 193, 7, 0.25);
-        }
-    </style>
 </head>
 <body>
     <div class="container mt-5">
