--- a/Mos Burger Spring Font End/burgermanage.html
+++ b/Mos Burger Spring Font End/burgermanage.html
@@ -4,50 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Burger Management</title>
+    <link rel="stylesheet" href="fooditem.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .card {
-            margin-bottom: 20px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-        .action-buttons .btn {
-            margin-right: 10px;
-        }
-        #updateBurgerForm {
-            display: none;
-            background-color: #f8f9fa;
-        }
-        .table-responsive {
-            border-radius: 8px;
-            overflow: hidden;
-        }
-        .form-control:focus {
-            border-color: #dc3545;
-            box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25);
-        }
-        .btn-burger {
-            background-color: #dc3545;
-            color: white;
-        }
-        .btn-burger:hover {
-            background-color: #bb2d3b;
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
 </head>
 <body>
-    <div class="container mt-5">
+    <div class="container mt-4">
         <h2 class="text-center mb-4">🍔 Burger Management</h2>
 
         <!-- Add Burger Form -->
         <div class="card p-3 mb-4">
             <h4 class="text-danger">Add New Burger</h4>
             <div class="row g-3">
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <label for="burgerName" class="form-label">Burger Name</label>
-                    <input type="text" id="burgerName" class="form-control" placeholder="e.g., Cheese Burger">
+                    <input type="text" id="burgerName" class="form-control" placeholder="Enter burger name">
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-4">
+                    <label for="burgerQty" class="form-label">Quantity</label>
+                    <input type="number" id="burgerQty" class="form-control" placeholder="Enter quantity" min="0">
+                </div>
+                <div class="col-md-4">
                     <label for="burgerPrice" class="form-label">Price</label>
                     <input type="number" id="burgerPrice" class="form-control" placeholder="Enter price">
                 </div>
@@ -67,7 +44,7 @@
                     </select>
                 </div>
                 <div class="col-12">
-                    <button class="btn btn-burger" onclick="addBurger()">Add Burger</button>
+                    <button class="btn btn-danger" onclick="addBurger()">Add Burger</button>
                 </div>
             </div>
         </div>
@@ -77,11 +54,15 @@
             <h4 class="text-danger">Update Burger</h4>
             <div class="row g-3">
                 <input type="hidden" id="updateBurgerId">
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <label for="updateBurgerName" class="form-label">Burger Name</label>
                     <input type="text" id="updateBurgerName" class="form-control">
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-4">
+                    <label for="updateBurgerQty" class="form-label">Quantity</label>
+                    <input type="number" id="updateBurgerQty" class="form-control" min="0">
+                </div>
+                <div class="col-md-4">
                     <label for="updateBurgerPrice" class="form-label">Price</label>
                     <input type="number" id="updateBurgerPrice" class="form-control">
                 </div>
@@ -103,7 +84,7 @@
                 <div class="col-12">
                     <div class="d-flex justify-content-end gap-2">
                         <button class="btn btn-secondary" onclick="cancelUpdate()">Cancel</button>
-                        <button class="btn btn-burger" onclick="updateBurgerDetails()">Update Burger</button>
+                        <button class="btn btn-danger" onclick="updateBurgerDetails()">Update Burger</button>
                     </div>
                 </div>
             </div>
@@ -113,7 +94,7 @@
         <div class="card p-3 mb-4">
             <h4>Search Burger</h4>
             <div class="input-group">
-                <input type="text" id="searchBurger" class="form-control" placeholder="Search by burger name...">
+                <input type="text" id="searchBurger" class="form-control" placeholder="Search by burger name">
                 <button class="btn btn-outline-danger" type="button" onclick="searchBurger()">
                     <i class="bi bi-search"></i> Search
                 </button>
@@ -137,6 +118,7 @@
                         <tr>
                             <th>ID</th>
                             <th>Name</th>
+                            <th>Qty</th>
                             <th>Price</th>
                             <th>Description</th>
                             <th>Image</th>
@@ -149,9 +131,7 @@
             </div>
         </div>
     </div>
-
     <script src="burger.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
 </body>
 </html>
