--- a/Mos Burger Spring Font End/orderManage.html
+++ b/Mos Burger Spring Font End/orderManage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Burger Order Management System</title>
+    <title> Order Management System</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -75,7 +75,7 @@
 <body>
     <div class="container mt-5">
         <h1 class="text-center system-title">
-            <i class="fas fa-hamburger me-2"></i>Burger Order Management System
+            <i class="fas fa-hamburger me-2"></i> Order Management System
         </h1>
 
         <div class="row">
