--- a/Mos Burger Spring Font End/pos.html
+++ b/Mos Burger Spring Font End/pos.html
@@ -11,7 +11,7 @@
 <body>
     <div class="sidebar">
         <div class="logo">
-            <img src="img/logo.png" alt="Logo">
+            <img src="img/logo.png" alt="Logo" onclick="triggerBurgerRain()">
         </div>
         <div class="menu">
             <a class="menu-item" onclick="showItems('burger')">
