--- a/Mos Burger Spring Font End/pos.html
+++ b/Mos Burger Spring Font End/pos.html
@@ -26,7 +26,7 @@
                 <i class="bi bi-plus-circle"></i>
                 <span class="menu-text">Add Items</span>
             </a>
-            <a class="menu-item" href="#">
+            <a class="menu-item" onclick="window.location.href='report_page.html'">
                 <i class="bi bi-graph-up"></i>
                 <span class="menu-text">Reports</span>
             </a>
