--- a/Mos Burger Spring Font End/pos.html
+++ b/Mos Burger Spring Font End/pos.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="posstyle.css">
 </head>
 <body>
+
     <div class="sidebar">
         <div class="logo">
             <img src="img/logo.png" alt="Logo" onclick="triggerBurgerRain()">
         </div>
         <div class="menu">
-            <a class="menu-item" onclick="showItems('burger')">
+            <a class="menu-item" onclick="window.location.href='pos.html'">
                 <i class="bi bi-house"></i>
                 <span class="menu-text">Home</span>
             </a>
@@ -22,7 +23,7 @@
                 <i class="bi bi-list-check"></i>
                 <span class="menu-text">Orders</span>
             </a>
-            <a class="menu-item" onclick="openTablePage()">
+            <a class="menu-item" onclick="window.location.href='FoodItemmanage.html'">
                 <i class="bi bi-plus-circle"></i>
                 <span class="menu-text">Add Items</span>
             </a>
